ATO-2282: Add missing test coverage